--- a/style.css
+++ b/style.css
@@ -8,29 +8,63 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    margin: 3rem 10rem 0 10rem;
 }
 
 a {
     text-decoration: none;
     color: black;
 }
+/* ----- */
 
 /* Header */
 #header {
-    padding: 0;
+    box-shadow: inset 1px -1px 5px 2.5px rgba(0, 0, 0, 0.5);
+    background-color: rgba(255, 255, 255, 0.25);
     display: flex;
-    justify-content: space-around;
-    backdrop-filter: blur(5px);
-    margin: 1rem;
-    border: black, solid;
-    border-radius: 1rem;
+    justify-content: flex-end;
+    backdrop-filter: blur(1rem);
+    margin-bottom: 1rem;
+    border-radius: 100vh;
 }
 .headerElement {
     list-style-type: none;
+    padding: 0.5rem;
 }
+.headerElement:hover {
+    box-shadow: inset 1px -1px 5px 2.5px rgba(0, 0, 0, 0.5);
+    background-color: rgb(150, 150, 200);
+    backdrop-filter: blur(1rem);
+    transition: 0.5s;
+    border-radius: 100vh;
+}
+/* ----- */
 
 /* ID */
+#sidebarAndMainContent {
+    box-shadow: inset 1px -1px 5px 2.5px rgba(0, 0, 0, 0.5);
+    background-color: rgba(255, 255, 255, 0.25);
+    padding: 1rem;
+    backdrop-filter: blur(5px);
+    margin-bottom: 1rem;
+    border-radius: 100vh;
+}
+
+#copyright {
+    box-shadow: inset 1px -1px 5px 2.5px rgba(0, 0, 0, 0.5);
+    background-color: rgba(255, 255, 255, 0.25);
+    padding: 1em;
+    backdrop-filter: blur(5px);
+    font-size: small;
+    text-align: center;
+    border-radius: 100vh;
+}
+/* ----- */
 
 /* Class */
-.mainContent {
+.buttonContainer (
+
+)
+.button {
+
 }
